adding squad wallets, logging and fixes

--- a/templates/index.html
+++ b/templates/index.html
@@ -119,6 +119,7 @@
     <div class="row">
         <div class="col-md-6">
             <ul class="icon-list">
+                <li><a href="{{ url_for('wallet') }}">Баланс отрядов</a></li>
                 {% if is_voteable %}
                     <li><a data-toggle="modal" data-target="#exampleModal"
                            href="https://getbootstrap.com/docs/4.6/getting-started/introduction">Выбор песен</a></li>
