--- a/templates/404.html
+++ b/templates/404.html
@@ -1,9 +1,252 @@
 <!DOCTYPE html>
 <head>
     <meta charset="UTF-8">
-    <title>Page not found</title>
+    <title>Не найдено</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/animate.min.css') }}">
-    <link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet" type="text/css">
+    <style>
+        .center-xy {
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            position: absolute;
+        }
+
+        html, body {
+            font-family: "Roboto Mono", monospace;
+            font-size: 16px;
+        }
+
+        html {
+            box-sizing: border-box;
+            -webkit-user-select: none;
+            -moz-user-select: none;
+            -ms-user-select: none;
+            user-select: none;
+        }
+
+        body {
+            background-color: #000;
+
+        }
+
+        .container {
+            width: 100%;
+        }
+
+        .copy-container {
+            text-align: center;
+        }
+
+        h1 {
+            color: #fff;
+            font-size: 110px;
+            letter-spacing: 1px;
+            margin: 0;
+        }
+
+
+        p {
+            color: #fff;
+            font-size: 36px;
+            letter-spacing: 1px;
+            margin: 0;
+        }
+
+        p:first-letter {
+            color: #4CBB17;
+        }
+
+        .handle {
+            background: #ffffff;
+            width: 20px;
+            height: 9px;
+            top: 95%;
+            margin-top: 1px;
+            position: absolute;
+            animation: blinker 1s step-start infinite;
+        }
+
+        h1 {
+            color: white;
+            font-family: "Roboto Mono", monospace;
+            font-weight: 800;
+            position: relative;
+            font-size: 100px;
+            padding: 30px;
+        }
+
+        h1::before, .wrapper h1.glitch::after {
+            padding-top: 30px;
+            color: white;
+            content: "404";
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            background: black;
+            overflow: hidden;
+            top: 0;
+        }
+
+        h1::before {
+            left: 3px;
+            text-shadow: -2px 0 red;
+            animation-name: glitch-animation-1;
+            animation-duration: 1s;
+            animation-timing-function: linear;
+            animation-delay: 0s;
+            animation-iteration-count: infinite;
+            animation-direction: alternate-reverse;
+        }
+
+        h1::after {
+            left: -3px;
+            text-shadow: -2px 0 blue;
+            animation-name: glitch-animation-2;
+            animation-duration: 2s;
+            animation-timing-function: linear;
+            animation-delay: 5s;
+            animation-iteration-count: infinite;
+            animation-direction: alternate-reverse;
+        }
+
+        @keyframes glitch-animation-1 {
+            0% {
+                clip: rect(20px, 350px, 7px, 30px);
+            }
+            5% {
+                clip: rect(76px, 350px, 74px, 30px);
+            }
+            10% {
+                clip: rect(74px, 350px, 108px, 30px);
+            }
+            15% {
+                clip: rect(94px, 350px, 65px, 30px);
+            }
+            20% {
+                clip: rect(130px, 350px, 39px, 30px);
+            }
+            25% {
+                clip: rect(13px, 350px, 84px, 30px);
+            }
+            30% {
+                clip: rect(20px, 350px, 81px, 30px);
+            }
+            35% {
+                clip: rect(98px, 350px, 58px, 30px);
+            }
+            40% {
+                clip: rect(129px, 350px, 29px, 30px);
+            }
+            45% {
+                clip: rect(88px, 350px, 111px, 30px);
+            }
+            50% {
+                clip: rect(131px, 350px, 142px, 30px);
+            }
+            55% {
+                clip: rect(31px, 350px, 108px, 30px);
+            }
+            60% {
+                clip: rect(20px, 350px, 38px, 30px);
+            }
+            65% {
+                clip: rect(55px, 350px, 123px, 30px);
+            }
+            70% {
+                clip: rect(40px, 350px, 39px, 30px);
+            }
+            75% {
+                clip: rect(26px, 350px, 145px, 30px);
+            }
+            80% {
+                clip: rect(52px, 350px, 64px, 30px);
+            }
+            85% {
+                clip: rect(67px, 350px, 103px, 30px);
+            }
+            90% {
+                clip: rect(88px, 350px, 21px, 30px);
+            }
+            95% {
+                clip: rect(145px, 350px, 93px, 30px);
+            }
+            100% {
+                clip: rect(27px, 350px, 54px, 30px);
+            }
+        }
+
+        @keyframes glitch-animation-2 {
+            0% {
+                clip: rect(29px, 350px, 49px, 30px);
+            }
+            5% {
+                clip: rect(17px, 350px, 97px, 30px);
+            }
+            10% {
+                clip: rect(12px, 350px, 5px, 30px);
+            }
+            15% {
+                clip: rect(96px, 350px, 51px, 30px);
+            }
+            20% {
+                clip: rect(125px, 350px, 25px, 30px);
+            }
+            25% {
+                clip: rect(53px, 350px, 41px, 30px);
+            }
+            30% {
+                clip: rect(11px, 350px, 129px, 30px);
+            }
+            35% {
+                clip: rect(139px, 350px, 142px, 30px);
+            }
+            40% {
+                clip: rect(28px, 350px, 112px, 30px);
+            }
+            45% {
+                clip: rect(116px, 350px, 16px, 30px);
+            }
+            50% {
+                clip: rect(77px, 350px, 71px, 30px);
+            }
+            55% {
+                clip: rect(87px, 350px, 28px, 30px);
+            }
+            60% {
+                clip: rect(150px, 350px, 77px, 30px);
+            }
+            65% {
+                clip: rect(106px, 350px, 34px, 30px);
+            }
+            70% {
+                clip: rect(61px, 350px, 57px, 30px);
+            }
+            75% {
+                clip: rect(51px, 350px, 148px, 30px);
+            }
+            80% {
+                clip: rect(98px, 350px, 81px, 30px);
+            }
+            85% {
+                clip: rect(22px, 350px, 70px, 30px);
+            }
+            90% {
+                clip: rect(133px, 350px, 56px, 30px);
+            }
+            95% {
+                clip: rect(11px, 350px, 138px, 30px);
+            }
+            100% {
+                clip: rect(113px, 350px, 94px, 30px);
+            }
+        }
+
+        @keyframes blinker {
+            50% {
+                opacity: 0;
+            }
+        }
+    </style>
 </head>
 <body data-new-gr-c-s-check-loaded="8.884.0" data-gr-ext-installed="">
 <div class="container">
