--- a/templates/index.html
+++ b/templates/index.html
@@ -8,12 +8,12 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/starter.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/styles.css') }}"/>
 
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
-
-
-
     <title>vympel</title>
+    <style>
+        .vympel {
+            margin-top: -30px;
+        }
+    </style>
 </head>
 <body>
 <div class="col-md-8 px-3 mx-auto">
