--- a/templates/song_rating.html
+++ b/templates/song_rating.html
@@ -1,12 +1,61 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Топ песен</title>
+    <title>Список песен с рейтингом</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <style>
+        @media (max-width: 576px) {
+            .container {
+                margin-top: 50px;
+            }
+            .list-group-item {
+                font-size: 16px;
+            }
+        }
+
+        .container {
+                margin-top: 20px;
+            }
+
+        .song-info {
+            display: inline-block;
+            vertical-align: middle;
+        }
+
+        .song-title {
+            display: block;
+            color: black;
+        }
+
+        .song-artist {
+            display: block;
+            color: gray;
+        }
+
+        .rating-badge {
+            display: inline-block;
+            vertical-align: middle;
+            margin-left: -5px;
+            margin-right: 10px;
+        }
+
+    </style>
 </head>
 <body>
-{% for song in chart %}
-    <p>{{ song }}</p>
-{% endfor %}
+    <div class="container">
+        <h2 class="mb-3">Топ песен</h2>
+        <ul class="list-group">
+        {% for song in chart %}
+        <li class="list-group-item">
+            <span class="badge badge-dark badge-pill rating-badge">{{ song[0] }}</span>
+            <div class="song-info">
+                <span class="song-title">{{ song[1].split(' - ')[1] }}</span>
+                <span class="song-artist">{{ song[1].split(' - ')[0] }}</span>
+            </div>
+        </li>
+        {% endfor %}
+        </ul>
+    </div>
 </body>
 </html>
