--- a/templates/song_rating.html
+++ b/templates/song_rating.html
@@ -3,20 +3,22 @@
 <head>
     <title>Список песен с рейтингом</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}"
+          integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <style>
         @media (max-width: 576px) {
             .container {
                 margin-top: 50px;
             }
+
             .list-group-item {
                 font-size: 16px;
             }
         }
 
         .container {
-                margin-top: 20px;
-            }
+            margin-top: 20px;
+        }
 
         .song-info {
             display: inline-block;
@@ -43,19 +45,19 @@
     </style>
 </head>
 <body>
-    <div class="container">
-        <h2 class="mb-3">Топ песен</h2>
-        <ul class="list-group">
+<div class="container">
+    <h2 class="mb-3">Топ песен</h2>
+    <ul class="list-group">
         {% for song in chart %}
-        <li class="list-group-item">
-            <span class="badge badge-dark badge-pill rating-badge">{{ song[0] }}</span>
-            <div class="song-info">
-                <span class="song-title">{{ song[1].split(' - ')[1] }}</span>
-                <span class="song-artist">{{ song[1].split(' - ')[0] }}</span>
-            </div>
-        </li>
+            <li class="list-group-item">
+                <span class="badge badge-dark badge-pill rating-badge">{{ song[0] }}</span>
+                <div class="song-info">
+                    <span class="song-title">{{ song[1].split(' - ')[1] }}</span>
+                    <span class="song-artist">{{ song[1].split(' - ')[0] }}</span>
+                </div>
+            </li>
         {% endfor %}
-        </ul>
-    </div>
+    </ul>
+</div>
 </body>
 </html>
