--- a/templates/404.html
+++ b/templates/404.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Не найдено</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/animate.min.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='/css/animate.min.css') }}">
     <style>
         .center-xy {
             top: 50%;
