--- a/templates/balance_3_squad.html
+++ b/templates/balance_3_squad.html
@@ -6,11 +6,24 @@
     <script src="../static/js/script.js"></script>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/styles.css') }}"/>
     <style>
-        html, body {background: #3eba32; height: 100%; margin: 0; padding: 0; font-size: 100px;}
+        html, body {
+            background: #3eba32;
+            height: 100%;
+            margin: 0;
+            padding: 0;
+            font-size: 100px;
+        }
 
-        div {width: 100%; height: 100% }
+        div {
+            width: 100%;
+            height: 100%
+        }
 
-        #squad_3 {display: flex;  justify-content: center;    align-items: center;}
+        #squad_3 {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
 
     </style>
 </head>
