--- a/templates/files.html
+++ b/templates/files.html
@@ -65,8 +65,8 @@
 </head>
 <body>
 <div class="container">
-    <h3 class="mb-3 align-center">Файлы</h3>
-    <p class="text-muted">Нажми, чтобы скачать фото архивом</p>
+    <h3 class="mb-3 align-center">файлы</h3>
+    <p class="text-muted">нажми, чтобы скачать фото архивом</p>
     <ul>
         {% for folder in folders %}
             <li>
