--- a/templates/song_rating.html
+++ b/templates/song_rating.html
@@ -37,7 +37,7 @@
 </head>
 <body>
 <div class="container">
-    <h3 class="mb-3">Топ песен</h3>
+    <h3 class="mb-3 text-center">топ песен</h3>
     <ul class="list-group">
         {% for song in chart %}
             <li class="list-group-item">
