--- a/templates/internet.html
+++ b/templates/internet.html
@@ -75,7 +75,7 @@
                 </div>
                 <div class="form-group text-center">
                     <button type="submit" class="btn btn-black">
-                        Авторизоваться
+                        ввод
                     </button>
                 </div>
             </form>
