--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}"
           integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/starter.css') }}">
@@ -48,9 +49,6 @@
                                 <option>{{ song[0] }}</option>
                             {% endfor %}
                         </select>
-
-
-                        <p></p>
                         <div class="form-group">
                             <label for="message-text" class="col-form-label">отряд:</label>
                             <div class="form-check form-check-inline">
@@ -97,7 +95,7 @@
                 <form>
                     <div class="modal-body">
                         <!--                        <div class="form-group">-->
-                        <!--                            <label for="recipient-name" class="col-form-label">Отряд:</label>-->
+                        <!--                            <label for="recipient-name" class="col-form-label">отряд:</label>-->
                         <!--                            <input type="text" class="form-control" id="recipient-name">-->
                         <!--                        </div>-->
                         <div class="form-group">
@@ -137,16 +135,8 @@
 <script src="{{ url_for('static', filename='js/jquery.slim.min.js') }}"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
-<script src="{{ url_for('static', filename='js/bootstrap.bundle.min.js') }}"
-        integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
-        crossorigin="anonymous"></script>
-<script src="{{ url_for('static', filename='js/popper.min.js') }}"
-        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-        crossorigin="anonymous"></script>
 <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"
         integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+"
         crossorigin="anonymous"></script>
-
-
 </body>
 </html>
