--- a/templates/internet.html
+++ b/templates/internet.html
@@ -3,7 +3,7 @@
 <head>
     <title>Доступ в интернет</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap_internet.min.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.internet.min.css') }}">
     <style>
         body {
             display: flex;
