--- a/templates/balance_3_squad.html
+++ b/templates/balance_3_squad.html
@@ -1,35 +1,91 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <title>Профиль 1 отряда</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="../static/js/jquery.min.js"></script>
     <script type="text/javascript" src="../static/js/socket.io.min.js"></script>
     <script src="../static/js/script.js"></script>
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/styles.css') }}"/>
     <style>
-        html, body {
-            background: #3eba32;
-            height: 100%;
-            margin: 0;
-            padding: 0;
-            font-size: 100px;
-        }
+    body {
+  font-family: 'Roboto', sans-serif;
+}
 
-        div {
-            width: 100%;
-            height: 100%
-        }
+        .profile {
+  max-width: 500px;
+  margin: 0 auto;
+  text-align: center;
+}
 
-        #squad_3 {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
+.symbol {
+  width: 100px;
+  height: 100px;
+  border-radius: 0%;
+  background-image: url('../static/images/no_image.png');
+  background-size: 100px 100px;
+  background-repeat: no-repeat;
+  image-rendering: optimizeSpeed;             /* STOP SMOOTHING, GIVE ME SPEED  */
+    image-rendering: -moz-crisp-edges;          /* Firefox                        */
+    image-rendering: -o-crisp-edges;            /* Opera                          */
+    image-rendering: -webkit-optimize-contrast; /* Chrome (and eventually Safari) */
+    image-rendering: pixelated;                 /* Universal support since 2021   */
+    image-rendering: optimize-contrast;         /* CSS3 Proposed                  */
+    -ms-interpolation-mode: nearest-neighbor;   /* IE8+                           */
+
+
+  margin: 20px auto;
+}
+
+h1 {
+  margin: -15px;
+  font-size: 32px;
+}
+
+.slogan {
+padding-top: 15px;
+  margin-top: 10px;
+  font-style: italic;
+  color: #999;
+}
+
+.info {
+  margin-top: 30px;
+}
+
+.members, .balance {
+  display: flex;
+  margin-top: 10px;
+}
+
+.members span:first-child,
+.balance span:first-child {
+  margin-right: 10px;
+  font-weight: bold;
+}
+
 
     </style>
 </head>
 <body>
+<div class="profile">
+    <div class="symbol"></div>
+    <h1>3 отряд</h1>
+    <p class="slogan">Мы рождены, чтоб сказку сделать былью</p>
 
-<div id="squad_3" class="vympel">загрузка...</div>
-
+    <div class="info">
+        <div class="members">
+            <span>Дата регистрации:</span>
+            <span>02.07.2023 г.</span>
+        </div>
+        <div class="members">
+            <span>Количество человек:</span>
+            <span>10 человек</span>
+        </div>
+        <div class="balance">
+            <span>Баланс:</span>
+            <div id="squad_3">загрузка...</div>
+        </div>
+    </div>
 </body>
 </html>
