--- a/templates/index.html
+++ b/templates/index.html
@@ -14,6 +14,8 @@
         .vympel {
             margin-top: -30px;
         }
+
+
     </style>
 </head>
 <body>
@@ -27,8 +29,10 @@
     </header>
     <h5>ближайшая дискотека: 1 июня</h5>
     <hr/>
-    {#    <p>Просьба не топтать пол под хардбас</p>#}
-    {#    <hr/>#}
+    {# <p>Просьба не топтать пол под хардбас</p>#}
+    {#
+    <hr/>
+    #}
 
     <!-- Modal -->
     <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
@@ -46,7 +50,7 @@
                         <label for="message-text" class="col-form-label">нажми для выбора ⬇️</label>
                         <select name="song" class="form-select w-100" multiple aria-label="multiple select example">
                             {% for song in data %}
-                                <option>{{ song[0] }}</option>
+                            <option>{{ song[0] }}</option>
                             {% endfor %}
                         </select>
                         <div class="form-group">
@@ -118,11 +122,12 @@
         <div class="col-md-6">
             <ul class="icon-list">
                 {% if is_voteable %}
-                    <li><a data-toggle="modal" data-target="#exampleModal"
-                           href="https://getbootstrap.com/docs/4.6/getting-started/introduction">выбор песен</a></li>
+                <li><a data-toggle="modal" data-target="#exampleModal"
+                       href="https://getbootstrap.com/docs/4.6/getting-started/introduction">выбор песен</a></li>
                 {% endif %}
                 <li><a href="{{ url_for('song_rating') }}">топ песен</a></li>
                 <li><a href="{{ url_for('squad_rating') }}">топ по отрядам</a></li>
+                <li><a href="{{ url_for('send_files') }}">обмен файлами</a></li>
                 <li><a href="{{ url_for('wallet') }}">баланс отрядов</a></li>
                 <li><a data-toggle="modal" data-target="#exampleModal1"
                        href="https://getbootstrap.com/docs/4.6/getting-started/build-tools">анонимное сообщение</a></li>
@@ -135,8 +140,8 @@
 <script src="{{ url_for('static', filename='js/jquery.slim.min.js') }}"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
-<script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"
-        integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+"
+<script src="{{ url_for('static', filename='js/bootstrap.bundle.min.js') }}"
+        integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
         crossorigin="anonymous"></script>
 </body>
 </html>
