--- a/templates/index.html
+++ b/templates/index.html
@@ -27,7 +27,7 @@
             </a>
         </h1>
     </header>
-    <h5>ближайшая дискотека: 1 июня</h5>
+    <h5>ближайшая дискотека: 14 июня</h5>
     <hr/>
     {# <p>Просьба не топтать пол под хардбас</p>#}
     {#
@@ -131,7 +131,7 @@
                 <li><a href="{{ url_for('song_rating') }}">топ песен</a></li>
                 <li><a href="{{ url_for('squad_rating') }}">топ по отрядам</a></li>
                 <li><a href="{{ url_for('send_files') }}">обмен файлами</a></li>
-                <li><a href="{{ url_for('wallet') }}">баланс отрядов</a></li>
+<!--                <li><a href="{{ url_for('wallet') }}">баланс отрядов</a></li>-->
                 <li><a data-toggle="modal" data-target="#exampleModal1"
                        href="https://getbootstrap.com/docs/4.6/getting-started/build-tools">анонимное сообщение</a></li>
                 <li><a href="{{ url_for('files') }}">скачать фотографии</a></li>
