--- a/templates/squad_rating.html
+++ b/templates/squad_rating.html
@@ -61,7 +61,7 @@
             <li class="list-group-item">
                 <span class="badge badge-dark badge-pill rating-badge">0</span>
                 <div class="song-info">
-                    <span class="song-artist">Пока нет голосов...</span>
+                    <span class="song-artist">пока что нет голосов...</span>
                 </div>
             </li>
         </ul>
