--- a/templates/karaoke.html
+++ b/templates/karaoke.html
@@ -3,7 +3,7 @@
 <head>
     <title>Доступ в интернет</title>
     <meta content="width=device-width, initial-scale=1" name="viewport">
-    <link href="{{ url_for('static', filename='css/bootstrap.internet.min.css') }}" rel="stylesheet">
+    <link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet">
     <style>
         body {
             display: flex;
@@ -18,17 +18,17 @@
             outline: 0;
         }
 
-        .btn-black {
+        .btn-dark {
             background-color: #000000;
             color: white;
         }
 
-        .btn-black:hover {
+        .btn-dark:hover {
             background-color: #282828;
             color: white;
         }
 
-        .btn-black:active {
+        .btn-dark:active {
             background-color: #3f3f3f;
             border-color: #3f3f3f;
             color: white;
@@ -38,7 +38,7 @@
             border-color: black;
         }
 
-        .btn-black {
+        .btn-dark {
             background-color: black;
             border-color: black;
         }
@@ -62,20 +62,18 @@
                 font-size: 14px;
             }
         }
-
-
     </style>
 </head>
 <body>
 <div class="container">
     <div class="row">
-        <div class="col-xs-12 col-md-4 col-md-offset-4">
+        <div class="col-xs-12 col-md-4 offset-md-4">
             <form method="POST">
                 <div class="form-group">
                     <input class="form-control" id="password" name="password">
                 </div>
                 <div class="form-group text-center">
-                    <button class="btn btn-black" type="submit">
+                    <button class="btn btn-dark" type="submit">
                         ввод
                     </button>
                 </div>
@@ -83,5 +81,6 @@
         </div>
     </div>
 </div>
+<script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
 </body>
 </html>
